--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "draggabilly": "^2.2.0",
     "gsap": "^2.1.3",
     "hammerjs": "^2.0.8",
+    "jump.js": "^1.0.2",
     "marzipano": "^0.9.0",
     "parallax-js": "^3.1.0",
     "roughjs": "^3.1.0"
