--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gsap": "^2.1.3",
     "hammerjs": "^2.0.8",
     "jump.js": "^1.0.2",
+    "lottie-web": "^5.5.5",
     "marzipano": "^0.9.0",
     "parallax-js": "^3.1.0",
     "roughjs": "^3.1.0"
